don't use getFirst() if the java version is 17...